# mgta415-nlp-demo

./: Makefile  README.md  env_template  pyproject.toml
data/: amazon_reviews.tsv  press_release_schema_format_instructions.txt
docker/: Dockerfile  docker-compose.yml
notebooks/: session0_alpaca_api_demo.ipynb  session1_keyword_extraction.ipynb  session1_text_preprocessing.ipynb  session2_amazon_reviews_topics.ipynb  session4_extract_structured_data.ipynb  sesssion1_text_vectorization.ipynb
