[tool.poetry]
name = "mgta415-demo"
version = "0.0.0"
description = "MGTA 415 Demo"
authors = ["Allison Wu <alw050@ucsd.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
requests = "^2.31.0"
jupyterlab = "^4.2.0"
nltk = "^3.8.1"
spacy = "^3.7.4"
textblob = "^0.18.0.post0"
transformers = "^4.42.3"
gensim = "^4.3.2"
scipy = "1.12.0"
alpaca-trade-api = "^3.2.0"
vadersentiment = "^3.3.2"
torch = "^2.3.1"
pyldavis = "^3.4.1"
mlxtend = "^0.23.1"
plotly = "^5.22.0"
crewai = "^0.51.1"
pydantic = "^2.8.2"
crewai-tools = "^0.8.3"
browserbase = "^0.3.0"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"